# functional

./: config.txt  gencw  identity.txt
Exercise1/: Ex1.rns  Exercise1.md  deploy.hs  ex1.cabal  stack.yaml
Exercise1/src/: Ex1.hs  Main.hs
Exercise1/test/: Spec.hs  readme.txt
Exercise2/: Ex2.rns  Exercise2.md  ex2.cabal  stack.yaml
Exercise2/src/: Ex2old.hs  Main.hs  Test2Support.lhs
Exercise2/test/: Spec.hs  readme.txt
