name:                ex1
version:             1.0.0.0
synopsis:            CSU34016 Exercise One
license:             BSD3
license-file:        LICENSE
author:              Andrew Butterfield
maintainer:          Andrew.Butterfield@scss.tcd.ie
category:            Game
build-type:          Simple
cabal-version:       >=1.10

library
  build-depends:      base,
                      containers
  other-modules:      Ex1
  hs-source-dirs:     src/
  default-language:   Haskell2010

executable ex1
  main-is:            Main.hs
  build-depends:      base,
                      containers
  other-modules:      Ex1
  hs-source-dirs:     src/
  default-language:   Haskell2010

test-suite Main
  main-is: Spec.hs
  type: exitcode-stdio-1.0
  x-uses-tf: true
  build-depends:  base,
                  containers,
                  HUnit,
                  test-framework,
                  test-framework-hunit


  hs-source-dirs: test, src
  default-language: Haskell2010
  other-modules:  Ex1


